fix erreur api timeslots + swagger
